tests/expected/function-contract/missing_contract_for_check.expected
error: Failed to check contract: Function `harness` has no contract.
  |
7 | #[kani::proof_for_contract(no_contract)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: Try adding a contract to this function or use the unsound `stub` attribute instead.
  |
5 | fn no_contract() {}
  | ^^^^^^^^^^^^^^^^
  